# isc-205

./: CMakeLists.txt  README.md
EjemploHoroscopoChino/: EjemploHoroscopoChino.cbp  main.c
EjercicioDesorganizados/EjemploHoroscopoChino/: main.c
EjercicioDesorganizados/Ejercicion/: main.c
EjercicioDesorganizados/ProblemaTeoriaString/: comparacion_string.c  comparacion_string.h
EjercicioDesorganizados/Teoria_Ejemplo1/: Teoria_Ejemplo1.layout  misllibrerias.h
EjercicioDesorganizados/alfabeto/: alfabeto.cbp  alfabeto.depend  main.c
EjercicioDesorganizados/ejemplo_pruebas_funciones/: ejemplo_pruebas_funciones.cbp  ejemplo_pruebas_funciones.depend  main.c  misfunciones.c  misfunciones.h
EjercicioDesorganizados/ejemplodebug/: ejemplodebug.depend  main.c
EjercicioDesorganizados/libro7_16/: libro7_16.depend  main.c
EjercicioDesorganizados/minunit_ProblemaTeoriaString/: main.c  minunit.h  minunit_ProblemaTeoriaString.cbp  minunit_ProblemaTeoriaString.depend  minunit_ProblemaTeoriaString.layout  miunit.h
EjercicioDesorganizados/minunit_ProblemaTeoriaString1/: main.c  minunit.h  minunit_ProblemaTeoriaString1.depend
EjercicioDesorganizados/minunit_ejemplo_pruebas_funciones/: minunit_ejemplo_pruebas_funciones.cbp  minunit_ejemplo_pruebas_funciones.depend  minunit_example.c
EjercicioDesorganizados/minunit_misuperprograma/: main.c  minunit_example.c  minunit_misuperprograma.cbp  minunit_misuperprograma.depend
EjercicioDesorganizados/misuperprograma/: main.c  milibreria.c  milibreria.h  misuperprograma.cbp  misuperprograma.depend
EjercicioDesorganizados/pascal/: main.c
EjercicioDesorganizados/suma2/: mis_acciones.c
Ejercicion/: Ejercicion.cbp  main.c
LabSeptiembre2019/CodigoInicialPractica10/: estudiantes.h  mainestu.c
LabSeptiembre2019/EjemploMinunitPrimos/: Primos_main.c  Primos_minunit.c  miLibreria.c  miLibreria.h
MENU/: MENU.cbp  main.c
ProblemaTeoriaString/: ProblemaTeoriaString.cbp  comparacion_string.c  comparacion_string.h
Teoria_Ejemplo1/: Teoria_Ejemplo1.cbp  Teoria_Ejemplo1.depend  main.c  mislibrerias.c
alfabeto/: alfabeto.depend  main.c
archivos/: archivos.depend  main.c
c_testing_from_exe/: abstract_test_case.py  obsolete.py  obsolete2.py  obsolete3.py  plantilla_simplificada_clion.py  plantilla_test_c.py
ejemplo_pruebas_funciones/: ejemplo_pruebas_funciones.depend  main.c  misfunciones.c  misfunciones.h
ejemplodebug/: ejemplodebug.cbp  ejemplodebug.depend  main.c
lab071/conv_bin_dec/: conversion.c  (+4 more)
leyendo con getch/: leyendo con getch.cbp  leyendo con getch.depend  leyendo con getch.layout  main.c
libro7_16/: libro7_16.cbp  libro7_16.depend  main.c
minunit_ProblemaTeoriaString/: main.c  minunit.h  minunit_ProblemaTeoriaString.depend  miunit.h
minunit_ProblemaTeoriaString1/: main.c  minunit_ProblemaTeoriaString1.cbp  minunit_ProblemaTeoriaString1.depend
minunit_ejemplo_pruebas_funciones/: minunit_ejemplo_pruebas_funciones.depend  minunit_example.c
minunit_misuperprograma/: minunit_example.c  minunit_misuperprograma.depend
misuperprograma/: main.c  milibreria.c  milibreria.h  misuperprograma.depend
pascal/: main.c  pascal.cbp
proyecto_prueba/: main_proyecto_prueba.c  mis_librerias.c  mis_librerias.h
scraper/: main.c  scraper.cbp  scraper.depend  scraper.layout
suma2/: main.c  mis_acciones.h  suma2.cbp  suma2.depend  suma2.layout
(+45 files in other folders)
