cmake_minimum_required(VERSION 3.14)
project(isc205 C)

set(CMAKE_C_STANDARD 99)

include_directories(includes)

add_executable(main_conv_bin_dec lab071/conv_bin_dec/main_conv_bin_dec.c lab071/conv_bin_dec/conversion.c lab071/conv_bin_dec/conversion.h)

add_executable(main_productopunto lab071/productopunto/main_productopunto.c lab071/productopunto/productopunto.c lab071/productopunto/productopunto.h)

add_executable(minunit lab071/conv_bin_dec/minunit.c lab071/conv_bin_dec/conversion.c lab071/conv_bin_dec/conversion.h)
add_executable(main_conv_bin_dec_arreglo lab072/conv_bin_dec_arreglo/main_conv_bin_dec_arreglo.c lab072/conv_bin_dec_arreglo/conv_bin_dec_con_arreglo.c lab072/conv_bin_dec_arreglo/conv_bin_dec_con_arreglo.h)
add_executable(main_busqueda teoria/busqueda/main_busqueda.c teoria/busqueda/busqueda.c teoria/busqueda/busqueda.h)
add_executable(main_ehJC ejJC/main_ehJC.c ejJC/miLib.h.c ejJC/miLib.h.h)
add_executable(minunit_ehJC ejJC/minunit_ehJC.c ejJC/miLib.h.c ejJC/miLib.h.h)
add_executable(main_suma_pares lab071/suma_pares/main_suma_pares.c lab071/suma_pares/funciones_recursivas.c lab071/suma_pares/funciones_recursivas.h)
add_executable(minunit_suma_pares lab071/suma_pares/minunit_suma_pares.c lab071/suma_pares/funciones_recursivas.c lab071/suma_pares/funciones_recursivas.h)
add_executable(main_proyecto_prueba proyecto_prueba/main_proyecto_prueba.c proyecto_prueba/mis_librerias.c proyecto_prueba/mis_librerias.h)
add_executable(minunit_proyecto_prueba proyecto_prueba/minunit_proyecto_prueba.c proyecto_prueba/mis_librerias.c proyecto_prueba/mis_librerias.h)

add_executable(buscamina_main teoria/tarea1/buscamina_main.c)
add_executable(minunit_leveshtein teoria/tarea1/minunit_leveshtein.c teoria/tarea1/leveshtein.c teoria/tarea1/leveshtein.h)
add_executable(P1 lab071/examen/P1.c)
add_executable(P3 lab071/examen/P3.c)
add_executable(clasemiercoles teoria/damarys/clasemiercoles.c)
add_executable(2P3 lab072/examen/2P3.c)
add_executable(2P2 lab072/examen/2P2.c)
add_executable(2P1 lab072/examen/2P1.c)
add_executable(Q6 teoria/quizzes/Q6.c)
add_executable(uso_ram teoria/memoriadinamica/uso_ram.c)
add_executable(claselunes teoria/damarys/claselunes.c)
add_executable(leer_del_teclado teoria/memoriadinamica/leer_del_teclado.c)
add_executable(ejercicio_11_10 teoria/memoriadinamica/ejercicio_11_10.c)
add_executable(multihilos proyectos/multihilos.c)
add_executable(Q3 teoria/quizzes/Q3.c)
add_executable(main_archivos teoria/archivos/main_archivos.c teoria/archivos/funciones_archivos.c teoria/archivos/funciones_archivos.h teoria/archivos/funciones_calculadora.c teoria/archivos/funciones_calculadora.h)
add_executable(Q6Teoria teoria/quizzes/Q6Teoria.c)
add_executable(repaso_memoria_dinamica teoria/memoriadinamica/repaso_memoria_dinamica.c)
add_executable(ejemplo_kbit lab071/ejemplo_kbit/ejemplo_kbit.c)